src/main/metadata-excluded/objects/MBDA_Coupon__c.object
<CustomObject>
    <fields>
        <fullName>Dealer_ND_Code__c</fullName>
        <label>Dealer ND Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <label>Dealer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>MBDA Coupons</relationshipLabel>
        <relationshipName>MBDA_Coupons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>使用</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>未使用</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>MBDA Coupon</label>
    <listViews>
        <fullName>MBDA</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>MBDA</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Coupon Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MBDA Coupons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>